[gd_scene load_steps=10 format=2]

[ext_resource path="res://prefabs/ProgressBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Keypad.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=14]
size = Vector3( 0.1, 0.4, 0.3 )

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 0.26, 0.26, 0.26, 1 )

[sub_resource type="CubeMesh" id=16]
size = Vector3( 0.01, 0.05, 0.2 )

[sub_resource type="SpatialMaterial" id=19]
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 5.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=17]
size = Vector3( 0.01, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=18]
albedo_color = Color( 0.56, 0.56, 0.56, 1 )

[sub_resource type="CylinderShape" id=27]
radius = 0.3

[node name="Keypad" type="Spatial"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5.23798, 0, 6.56231 )
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.78586, 0 )
mesh = SubResource( 14 )
material/0 = SubResource( 15 )

[node name="Display" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0564337, 0.135576, 0 )
mesh = SubResource( 16 )
skeleton = NodePath("../..")
material/0 = SubResource( 19 )

[node name="MeshInstance3" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0483373, -0.0501595, 0 )
mesh = SubResource( 17 )
skeleton = NodePath("../..")
material/0 = SubResource( 18 )

[node name="KeyPadArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.78586, 0 )

[node name="CollisionShape" type="CollisionShape" parent="KeyPadArea"]
shape = SubResource( 27 )

[node name="ProgressBar" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0 )

[connection signal="area_entered" from="KeyPadArea" to="." method="_on_KeyPadArea_area_entered"]
[connection signal="area_exited" from="KeyPadArea" to="." method="_on_KeyPadArea_area_exited"]
